# Embedded-Linux

./: README.md  bashTask.bash
AdminLinux_Task1/: EmbLinux_Task1.odt
AdminLinux_Task2/: BinarySearchAPP.c  EmbLinux_Task2.odt  Na2na2a.odt  Question2.odt
AdminLinux_Task3/: Section2.odt  readme.md  section1.bash  section1.sh
AdminLinux_Task5/: Section1.md  section1.sh  section2.odt
AdminLinux_Task6/: Task6_AdminLinux.odt
EXAM/: ExamG3.odt  script_exercise.sh
EmbeddedLinux_Task1/: EmbeddedLinux_Task1.odt  main.c  makefile
EmbeddedLinux_Task1/DynamicLinking/: main.out
EmbeddedLinux_Task1/HeaderFiles/: addition.h  modulus.h
EmbeddedLinux_Task1/SourceFiles/: addition.c
EmbeddedLinux_Task1/StaticLinking/: main.out
EmbeddedLinux_Task2/Task3/: README.md
EmbeddedLinux_Task2/Task4/: Makefile  README.md  main.c  main.elf
EmbeddedLinux_Task2/Task4/Headers/: Bit_Math.h  DIO.h  MyDelay.h  PORT.h  PORT_cfg.h  Typedefs.h  delay.h  stdRegs.h
EmbeddedLinux_Task2/Task4/Sources/: DIO.c  PORT.c  PORT_cfg.c  delay.c
EmbeddedLinux_Task5/DynamicLinking/lib/: CMakeLists.txt
EmbeddedLinux_Task5/HeaderFiles/: division.h  multiplication.h  subtraction.h
EmbeddedLinux_Task5/SourceFiles/: division.c  modulus.c  multiplication.c  subtraction.c
EmbeddedLinux_Task5/StaticLinking/: CMakeLists.txt
EmbeddedLinux_Task5/StaticLinking/lib/: CMakeLists.txt
